--- a/index.html
+++ b/index.html
@@ -2375,7 +2375,653 @@ Ciudad del Cabo
 ciudad
 ciudadano
 ciudades
-civilización	
+civilización
+claridad
+clarín
+claro
+claro
+clave de sol
+clave
+clavel
+clemencia
+clima
+clip
+Coacalco
+Coahuila 
+coahuilense
+coahuilense
+Coatzacoalcos 
+cobarde
+cobarde
+cobarde
+cobardía
+cobertizo ovejero
+cobertor
+cobrador
+cobranza
+cobrar 
+cobre
+coca
+cocaína
+cocer
+cocerse
+cochambre
+cochambroso
+coche
+cochera
+cochera
+Cochimetl 
+cochinilla
+cocido
+cocina
+cocina
+cocinar
+cocinero
+cocinero
+coco
+cocodrilo
+Cocoyoc 
+cóctel
+cocuyo
+códice
+codicia
+codiciar
+codicioso
+codicioso
+código
+codo
+codorniz
+codorniz de agua
+codorniz 
+cofrade
+cofradía
+cohete
+cohuixca 
+col
+col
+cola de ave
+cola de caballo
+cola de lagarto
+cola
+coladera
+colador
+colar
+colchón
+colegio
+colegio militar
+colera
+colgado
+colgaje
+colgar
+colhua
+colibrí
+coliflor
+colimense
+collar de conchas marinas
+collar de esmeraldas
+collar de flores
+collar de obsidiana
+collar de oro
+collar de turquesas
+collar
+colmena de avispones
+colmillo
+colocado sobre
+colocar
+colocarse frente a alguíen
+coloche
+Colombia
+colombiano
+colon
+color
+colorante
+coloreado
+colorear
+colorín
+columna redonda
+columna vertebral
+columnata
+columpiar
+columpio
+coma
+comadre
+comadreja
+comal
+Comala 
+Comalcalco 
+comandancia
+comandante
+comandantes
+combate
+combatiente
+combatir
+combatir
+combatir
+comedor
+comer carne
+comer cebolla
+comer con exeso
+comer dulces
+comer elotes
+comer frijoles
+comer mal 
+comer pescado
+comer tamales
+comer
+comerciante
+comerciante
+comerciar 
+comerciar
+comercio
+cometa
+comezón
+comida de dios
+comida rápida
+comido
+comienzo
+Comitán 
+como
+cómo
+como 
+como no
+como
+Comores
+compadecer
+compadre
+comparación
+comparado
+comparar
+compás
+competencia
+competir
+competitividad
+complemento
+completamente
+completo
+completos
+complicación
+complicado
+complicar
+componer
+comportamiento
+comportarse
+compositor
+compositores
+Compostela 
+compra
+comprar 
+comprar carne
+comprar elotes
+comprar fríjol
+comprar pescado
+compras
+comprender
+comprender
+comprendido
+comprensión
+comprensivo
+comprometedor 
+comprometer
+comprometido
+compromiso
+compuerta
+compuesto
+compuesto
+comulgar
+común
+común
+comunicación a distancia
+comunicación
+comunicar
+comunidad
+comunión
+comversación larga
+con él
+con ellos 
+con gusto
+con nosotros
+con permiso
+con su permiso
+con uno 
+con ustedes
+con
+cóncavo
+conceder
+concedido
+concejo
+concepción
+concha de armadillo
+concha
+concha nacar
+conciencia
+concierto
+concierto
+concreto
+concreto
+concubinas
+concuño
+concurrencia
+concurso
+conde
+condesa
+condimento
+condominio
+condón
+condor de california
+cóndor 
+conducción
+conducido
+conducir 
+conducto
+conejillo de indias
+conejillos
+conejito
+conejo
+conejo
+conejos
+confeción
+confederación
+confederado
+confesar 
+confesionario
+confianza
+confiar
+confiar en alguien
+confiarse
+confidencial
+confirmación
+confirmación sacramental
+confirmado
+confirmar en sacramento 
+confirmar
+conformar
+conformidad
+confortable
+confortar
+confundido
+confundir
+confundir 
+confusión
+confuso
+congelador
+Congo
+Congo Democrático
+congoleño
+conjunción
+conjunto
+conmigo
+cono de pino
+conocedor de plantas
+conocedor
+conocer mujeres
+conocer varones
+conocer
+conocido
+conocido
+conocimiento
+conocimiento
+conquista
+conquistado
+conquistado
+conquistador
+conquistador 
+conquistar
+consagrado
+consagrar
+consagrar 
+conseguido
+conseguir 
+consejo
+consentido
+consentimiento
+consentir 
+conserva
+conservación
+conservado
+conservatorio de música
+considerado
+considerar 
+consola
+consolación
+consonante
+constancia
+constelación
+constipación
+constipado
+constitución
+constituido
+constituir 
+construcción
+constructor
+construido
+construir casas
+cónsul
+consulado
+consulta
+consultado
+consultar
+consumido
+consumir
+consumo
+contado
+contado
+contador
+contaduría
+contagiar
+contagio
+contaminación
+contaminado
+contaminado
+contaminante
+contar a otro
+contemplación
+contemplación
+contemplativo
+contener
+contenido
+contento
+contento
+Contepec 
+contestación
+contestador
+contestar
+contigo
+contigo 
+continente
+continuación
+continuamente
+continuo
+contrabajo
+contradecir
+contradicción
+contradictorio
+contrario
+contratación
+contratación
+contratar
+contrato
+contraviento
+convencer
+convencerse
+convencido
+convencidos
+convencimiento
+convento de monjas
+convento de monjes
+conversación
+conversación
+conversar
+convertir al cristianismo
+convertir
+convertirse al sectarismo
+convertirse en animal
+convidar
+convulsión
+copa
+copal fino
+Copenhague
+copia
+copiadora
+Copilco 
+copla
+coraje
+coraje
+corajudo
+coral del mar
+coral
+coralillo 
+coralillo 
+corazón limpio
+corazón
+corazón precioso
+corazonada
+corazoncito
+corazones
+corbata
+corcho
+cordero
+cordillera montañosa
+cordón umbilical
+cordura
+Corea del norte
+Corea del sur
+coreano
+coreano 
+cornada
+corneta
+corno
+coro
+corona
+corral
+correa
+correcaminos
+corredor
+corregir 
+correo
+correo
+correr
+corretear 
+corrido 
+corrido
+corriente
+corriente de agua
+corrupción
+corrupto
+corsé
+cortador
+cortador de chiles
+cortar 
+cortar el cabello
+cortar la cara
+cortar
+corte de pelo
+cortejar 
+cortejar
+cortés
+cortesía
+corteza terrestre
+cortina
+corto
+corto de ideas
+cosa antigua
+cosa cerrada
+cosa esponjosa
+cosa 
+coscorrón
+cosecha
+cosechador
+cosechador
+cosechar
+coser
+cosido
+cosmíco
+Costa de Marfil
+costa
+costa
+Costa Rica
+costal
+costar
+costarricense
+costilla
+costo
+costumbre
+costumbre
+costumbre
+costurera
+cotorra serrana 
+cotorra serrana
+cotorro australiano
+cotorro
+Coyame 
+Coyoacán
+Coyolxauhqui 
+coyote 
+Coyotepec
+coyotero
+Coyuca 
+coyuntura
+cráneo
+cráter
+creador del universo
+creatividad
+crecer
+crecer los ríos
+crecido
+crecido
+crecimiento
+credo
+creer 
+creer firmemente
+crema de leche
+crema
+crepúsculo
+crespo
+cresta de ave
+cresta
+creyente
+criada
+criatura
+crimen
+criminal 
+crin
+criollo
+cristal
+cristianismo
+cristiano
+cristo
+criterio
+crítica
+criticar
+Croacia
+croar
+croata
+cromado
+cromar 
+cromo
+cruce
+cruce peatonal
+crucero
+crucero
+crucifición
+crudo
+crudo
+cruel
+crueldad
+crujía
+crujido
+crujir
+cruz
+cruz roja
+cruzar
+cuaderno
+cuadrar
+cuadril
+cuadro
+cuadro
+cuadro
+cuajado
+cuajar
+cuajarse
+cuajilote
+Cuajimalpa 
+cuajo
+cualquier persona
+cualquier
+cuándo
+cuando
+cuantas personas
+cuantas veces
+cuánto
+cuanto 
+cuántos
+cuarenta
+cuaresma
+cuarteto
+cuarto
+cuarzo
+cuatro
+cuatro mil
+cuatrocientos
+Cuauhpopocac 
+Cuauhtepec 
+Cuauhtitlan 
+Cuauhtla 
+Cuautlatzingo 
+Cuba
+cubano
+cubierta
+cubo
+cubrir
+cubrir
+cucaracha
+cuchara de barro
+cuchara
+cucharada
+cucharón de acero
+cucharón de madera
+cuchillada
+cuchillo
+cuello
+cuenca
+cuenta
+cuento fantástico
+cuerda
+cuerno
+cuero cabelludo
+cuero cabelludo
+cuero
+cuerpo divino
+cuerpo glorificado
+cuerpo humano
+cuerpo
+cuerudo
+cuerudo
+cuervo de agua
+cuervo
+cuesta
+Cuetzalán
+cueva de agua
+cueva
+cueva vertical
+Cuicuilco
+cuidado
+cuidador de jóvenes
+cuidadora de doncellas
+cuidadoso
+cuidar
+cuitlacoche
+Cuitlahuac 
+culantrillo
+Culiacán
+cultivar
+cultivo de abejas mieleras
+cultivo de caña
+cultivo de chiles
+cultivo de maíz
+cultivo de maíz
+cultivo
+culto
+cultura
+cumbre
+cuna
+cuñada de la mujer
+cuñada
+cuñado de la mujer
+cuñado del hombre 
+cúpula
+curación
+curandero de mal de ojo
+curandero
+curanderos
+curar
+curiosidad
+curioso
+curtido
+curtidor
+curtir 
+curva
+curvo
+cutícula
 </div>
 
 <div class="nahuatl">
@@ -4713,6 +5359,652 @@ altepetl
 altepetlacatl
 altepemeh
 altepetlacayotl
+caquizticayotl
+coyotototl
+tlahuillo
+chipahuac 2
+cuicamachiotl
+tlatlapololiztli
+caxtilxochitl
+teicnoittaliztli
+tlalizcayotl
+tlachichtli
+Coacalco
+Coahuillan
+coahuiltecatl
+coahuilatl
+Cuauhtzacualco
+mauhtlacatl
+mauhqui 1
+mauhcatlacatl
+mauhtlacayotl
+ichcalli
+pepechtlapalchiuhcayotl
+tlaxitoqui
+tlaxitoquiliztli
+xitoca
+amochitl
+xiuhxitl
+iztapiciuhxitl
+ixca
+huici
+pochehuitl
+pochehuic
+tepozcalnehnenqui
+tepozmalacahuayan
+caltepozcalnehnenqui
+Cochimetl
+nochiztli
+ixcalli
+tlacualchihualoyan
+tlacualcalli
+tlacualchihuilia
+tlacuani
+tlacualchiuhqui
+cocotl
+cipactli
+Cocoyoc
+coctelli
+popoquitli
+tlahtoamatl
+netlaicoltiliztli
+icoltia
+netlaicoltiallo
+atlequixcahuac
+machionecaquiliztli
+molictli
+zolli 1
+azolli
+zolin
+tecuhteocani
+tecuhteocayotl
+xittontlaxochitl
+cohuixcatl
+colix
+quiltectli
+totopilli
+cuitlapiltzontli
+cuetzapamitl
+cuitlapilli
+apaztli
+tzetzeloni
+nextlalia
+pepechtli
+calmachtiloyan
+calmaxcalli
+coztalahuac
+pilotoc
+pilolli
+piloa
+colhuatl
+huitzilli
+xochiquilitl
+colmecatl
+chipolcozcatl
+chalchiuhcozcatl
+xichimecatl
+itzcozcatl
+teocuitlacozcatl
+xiuhcoatl
+cozcamecatl
+chilpayatl 1
+tocuatlac
+ipac
+tlalia 1
+ixpanhuia
+colotzin
+Colombia
+colombitecatl
+cuitlaxcoltomactli
+tlapalli
+yapaltic
+tlapallo
+tlapaloa
+tzompantli 2
+temimilli
+tepotzotl
+tlaquetzamimilli
+tlahuihuixoa
+tlahuihuixolli
+tlilhuantli
+teotenantli
+cozamatl
+comalli
+Comallan
+Comalcalco
+achtontecalli
+achtontecatl
+achtontecah
+yaochihualiztli
+yaochihuani
+yaochihua
+yehcoa 1
+nequi 1
+tlacualoyan
+nacacua
+xonacacua
+pozati
+tzopelcua
+elocua
+ecua
+apitzti
+michcua
+tamalcua
+cua
+tlacemanqui
+pochtecatl
+cemana
+qui
+pochtli
+xicoatl
+quexquiztli
+teotlacualli
+tlacatlacualli
+tlacualo
+pehualiztli
+Comitan
+quen
+quenin
+quemen
+quenamo
+ican
+Comoriah
+motlacoltia
+teotetahtli
+tlanenehuiliztli
+tlanenelilli
+nenehuila
+analoni
+ixcomaliztli
+ixcomaca
+ixcomacayotl
+axiltilli
+centetica
+centetl
+axiltoque
+ohuiyotl
+ohuilli
+ohui 1
+yectlalia
+yeliztli
+yelia
+cuicapixqui
+cuicapixque
+Cacquitlan
+tlacohualiztli
+cohua
+nacacohua
+elocohua
+ecohua
+michcohua
+ecahuiltin
+icnomati
+acicamati
+acicamatilli
+icnomatiliztli
+icnomatqui
+tetechninocahuani
+tetechninocahua
+tetechtlacauhtli
+tetechtlacahualiztli
+atzacualli
+yectlalilli
+tlapatilli
+nocelilia
+nexpanacatl
+macehualli 1
+temacilli
+nezcayopanoliztli
+matilti
+nepentlatquicayotl
+nicnoceliztli
+ecamecatl
+inahuac
+intloc
+ica paquiliztli
+totloc
+teixcontzinco
+teixcontzinco
+iccequin
+iccequintin
+ica
+comac
+itlani
+itlanilli
+necentlaliliztli
+netlaliliztli
+ayocallotl
+ectli
+tapachtli
+yolixtli
+tetozcanamictiliztli
+tlatecpanaliztli
+nextetl
+temachtli
+cihuatlaixnamique
+chahuatetl 2
+temohuatl
+ixcomacaliztli
+conde
+cihuaconde
+xihuitl
+chantlayocan
+tepolpopolochtli
+cozcatzopilotl
+mixcuauhtli
+tlamalacayaniliztli
+tlamalacayanilli
+malacayana
+mecamalacayani
+cuatochin
+tochtoton
+tochconetl
+tochin
+tochtli
+tochtin
+tlayolmelahualiztli
+alteptlatzcoztli
+altepetlatzconi
+yolmelahua
+neyolmelahualoni
+temachyotl
+temachi
+temachia
+temachia
+ichtacayo
+tlachicahualiztli
+nicchicahualiztli
+tlachicahualli
+chicahua 2
+chicahua 1
+cemati
+cematiliztli
+acohuetziqui
+acohuetzi
+amixmatilli
+tentzacua
+amixmati
+tentzacualiztli
+tentzacuani
+itzcaxitl
+Conco
+Conco Tlacatlahtocayotl
+concotl
+ihuaniztli
+nechicoliztli
+nohuan
+xolocotli
+xiuhmanqui
+aacini
+itechnaci
+itechaci
+ixmati
+ixmatilli
+ixmachtli
+tlaixnematiliztli
+nemachtoquiliztli
+pehualli 1
+tlapeuhtli
+tlapehualli
+tlapoloani
+tlalpoloani
+matoma
+tlateochihualli
+teotiya
+teochihua
+tlanocpilihuilli
+nocpilihua
+tlahtolnamiquiliztli
+tetlahuelcaqui
+tetlahuelcaquiliztli
+tlahuelcaquilia
+necuhtlachihualli
+tlachihualiztli
+tlachihualli
+cuicacalli
+neyolnonotzalli
+yolnonotza
+cuicacaxitl
+acotlazaliztli
+icacaquiztli
+netlacuauhquetzaliztli
+centzonhuitzahuac
+yacapotoniliztli
+yacapotonilli
+nahuatillaliztli
+nahuatillalli
+nahuatillalia
+calmanaliztli
+calchihuani
+calchiuhtli
+calchihua
+huehcatitlantli
+huehcatlahtolcalli
+neyolnotzaliztli
+netolnotzalli
+neyolnotza
+centlamialli
+centlamia
+centlamializtli
+tlanonotzallo
+tlapouhtli
+pouhqui
+tlapouhcayotl
+mahua
+temauhtiliztli
+tlalpopochtli
+temauhqui
+temahualli
+temahuani
+pohuilia
+acohuehuetiliztli
+acoyaliztli
+acoyani
+icpia
+icpialitoc
+yolpachihui
+pacqui
+Comitepec
+copiltlahtolli
+tenanquiliani
+copiltlahtoa
+mohuan
+monahuac
+hueytlalpan
+tetocaliztli
+tetocayotica
+tetocayo
+hueymecahuehuetl
+tlatolilochtia
+tlahtolilochtiliztli
+tlahtolilochtiani
+teyouhqui
+tlaquehualiztli
+tlanecuiloliztli
+quitoa
+zayanaliztli
+ehecaixnamiquiliztli
+ellequi
+ellequia
+ellequilli
+ellequiltin
+ellequitl
+cihuateocalli
+oquichteocalli
+motlapouhyotl
+tlahtoyotl
+motlapohuia
+quixtiania
+mocuepa
+tlalnetoquia
+yolcati
+yecolti
+huixcayotl
+tlahuantli
+yauhtli
+Hafnia
+neixcuitilli 1
+neixcuitilamacalli
+Copilco
+centlacxitl
+cuezolli
+zomalli
+cuezolli
+tepachtli
+atecolli
+cocuilcoatl
+cozcacoatl
+yoloiztac
+yolotli
+cozcayollotl
+yoloyotl
+yolotzintli
+yoyolo
+quechmecatl
+cuauhzonectli
+ichcaconetl
+mecatepetlan
+xicmecayotl
+nezcalicayotl
+Coria Ayamictlan
+Coria Huitztlan
+coriatl
+coriatecatl
+tecucuahuiliztli
+tepozcuacuahuitl
+cuicacuacuahuitl
+cuicatlapechtli
+copilli 1
+tepanchinamitl
+ehuamecatl
+ehecatotolin
+motlaloani
+tlahuelalilia
+amatlacuiloloyan
+amatlacuiliztli
+paina
+toca 3
+chololli
+cuicatlayehualtilli
+peyahuac
+imopiloayan
+itlacahuiztli
+itlacahuiztiani
+cihuanelpilolli
+tequechcotonani
+chiltequi
+tequi
+tzontequi 1
+ixtequi
+xima 1
+tzontequiliztli
+xictia
+nahuatlahtolcuepa
+tecpilticani
+tecpilticayotl
+atlalcaxoyatic
+tocapantli
+tichtic
+tetlazomacani
+zololli
+tlatzacuhtli
+puxactic
+tlamantli
+cuatepinilli
+pixquitl
+pixcaltequi
+yelimiqui olinqui
+pixca
+tzoma
+tlatzontli
+ilhuicayotl
+Elepantlantlanahuac
+ayahualolco
+anahuatl
+Necuiltonolanahuac
+cayamaztli
+ipati
+necuiltonolanahuatlacatl
+omicicuilli
+patioyotl
+yequiliztli
+tlamanatiliztli
+tlamaniliztli
+tlazomani
+chiltepetototl
+quilitototl
+alotexotli
+quitototl
+Coyamec
+Coyoacan
+Coyolxauhqui
+coyotl
+Coyotepec
+coyohuac 1
+Coyocan
+zaliuhyantli
+cuacalaccantli
+axalapazco
+cenyocoyanemini
+nextiliztli
+mozcalti
+tlahueyalti
+mozcaltic
+chamahuac
+onyaliztli
+neltoquiliztli
+neltoca
+chicahuatlaneltoca
+itlaixochichihualayotl
+acoztic
+tlapoyahuac
+colochtic
+cuanacatl 1
+cuachiquilli
+neltoconi
+cihuatetlanamiuhqui
+tlayacoxtli
+tlatzauhtlacoliztli
+tlatzauhtlacolli
+quetzontli
+tlacapiltic
+tzilichtetl
+quixtianayotl
+quixtiani
+quixto
+popohuayotl
+popohuaztli
+popohua
+Coaxia
+cataloa
+coaxitecatl
+petlactic
+petlacui
+petlactli
+panoliztli
+ohmachiotl
+nauhohtli
+panoayan 1
+tlamanayotl
+ayamotlacxotilli
+xotli
+atlacaneci
+atlacayotl
+calmecac 1
+capani
+xaxamatza
+cuauhtollo
+chichilcuauhtollo
+pano
+izuamoxtli
+nopanitia
+quetztepolli
+nauhtlatehuilli
+tlanacazantli
+tlapayotl
+tlatetzauhlli
+tlatzacuana
+tlatzacuania
+cuauhxilotl
+Cuauhximalpan
+tlatzacuaniliztli
+aquinzazo
+tlenzazo
+queman
+ihcuac
+queztlacapan
+quezquipan
+quezquin
+nicuico
+quezquintin
+ompoalli
+nezahualizpan
+tlapinauhcuicaliztli
+inic nahui
+chahuatetl 1
+nahui
+matlactzontli
+centzontli 2
+Cuauhpopocac
+Cuauhtepec
+Cuauhtitlan
+Cuauhtlan
+Cuauhtlatzinco
+Copan
+copatl
+tlacehualhuilli
+tlaxantetectli
+ixpachoa
+ololoa
+calayotl
+xomatli
+xonpepetl
+matlacualxopiloni
+tepozneloani
+cuauhneloani
+tepoztehuitequilli
+tlaxotlahuiqui
+quechtli
+tlaxomolli
+pohualli
+tlahtolpapalotl
+mecatl
+cuacuahuitl
+cuaehuayotl
+ehuayotl
+ehuatl
+nacayotzin
+aquenechihualiztli
+tonacayotl
+nacayotl
+ehuayo
+pipinic
+acacalotl
+cacalotli
+tlecoayan
+Quetzallan
+aoztotl
+oztotl
+olhuaztli
+Cuicuilco
+netlacuitlahuiliztli
+telpochtlatoc
+ichpochtiachcauhtli
+netlacuitlahuini
+tlacuitlahuia
+cuitlacochin
+Cuitlahuac
+tlaquequetzatl
+Colhuacan
+tlamehua
+mimiahuacaxitl
+ohuayotl
+chillan
+tlalmimilolpan
+tlayollan
+tlamehualli
+chihualtlacatl
+chihualtlacayotl
+tepetlacpayotl
+cozolli
+hueztli
+huezualli
+huepolli
+texpolli
+cuatlacalli
+tepatiliztli 1
+ehecapatiani
+tepatiqui
+tepatique
+patia 1
+tlanematcachihualiztli
+totolpaltini
+tlayamalli
+tlayapixquic
+yamalia
+tepoztzotic
+noltic
+lotl
 </div>	 
 		 
 	 </body>
