--- a/index.html
+++ b/index.html
@@ -3022,6 +3022,419 @@ curtir
 curva
 curvo
 cutícula
+dadiva
+dadivoso
+dado
+dador
+daga
+dalia
+dama
+dama
+damiana 
+damita
+danés
+danés
+danza
+danza
+danzante 
+danzar
+danzar
+dañado
+dañar
+dañino
+daño
+dar 
+dar a entender 
+dar buen consejo 
+dar consejo 
+dar credito 
+dar de comer 
+dar de gritos
+dar der beber
+dar la cara
+daral ejemplo
+dar nalgadas
+dar palmada
+dar parte 
+dar placer 
+dar razón 
+dar vueltas
+dar
+dardo
+dátil
+de
+de abajo
+de allá para acá 
+de ambos lados
+de buen oído
+de buen pie
+de buenaano
+de casa en casa 
+de día
+de dos en dos
+de esaanera
+de España
+de laismaanera
+de los 
+deadrugada
+de México
+de ningúnodo es posible 
+de noche
+de nuevo
+de otro color
+de plano
+de quéanera
+de
+de
+de
+de
+debajo de él 
+deber
+débil 
+débil
+debilidad
+debilitado
+decaimiento
+décimo
+decir
+decir 
+decir chistes
+decisivo
+declamación
+declaración
+declarado 
+declarar
+decolorado 
+decolorar
+decoración 
+decorado 
+decorar
+dedal
+dedo del pie
+dedo
+dedoeñique
+dedo pulgar
+defecto
+defectuoso
+defender 
+defendido 
+defensa
+defensor
+definición
+definido
+definir 
+definitivamente
+degollado
+degollar 
+dejalo allá
+dejalo allí
+dejar dormir
+dejar
+delantatero
+delante de ella
+delante de ellos 
+delante
+delatado
+delatar
+delfín 
+delgado 
+delgado
+delgado
+delicadeza
+delicado
+delirio
+delta
+delta
+demaciados
+demasiado caro
+demoler
+demolición
+demolido
+demonio
+demonio
+demonios
+demostración
+demostrar
+dentista
+dentro de él 
+dentro de la casa 
+dentro
+departamento
+depilación
+deporte
+deportivo
+deportivo 
+depósito
+depravación
+depravado 
+depresión
+deprimido
+derecha
+derecho
+derecho
+derecho
+derechos humanos
+derpertar
+derramar
+derramar
+derramarse
+derretir
+derretirse
+derribado
+derrocar
+derrocar
+desabrigado 
+desabrigar 
+desacierto
+desafiar 
+desafío
+desagradable
+desagradable
+desagradecido
+desaliñado
+desamor
+desamparado
+desamparo
+desaparecer
+desaparecido
+desaparición
+desarmado
+desarmar
+desarmar 
+desarrolllo
+desastre
+desastroso
+desatado
+desatención
+desatento
+desayunar
+desayuno
+desbaratado
+desbaratar
+desbarrancado
+desbarrancar
+descalabrado
+descalabrar 
+descalzo
+descansar
+descanso
+descarado
+descarado
+descarar
+descarga
+descargado
+descargar
+descargar
+descender
+descendido
+descendimiento
+desceso
+descobijado
+descobijar 
+descocer
+descocer 
+descolorido
+descomponer
+descompuesto
+desconfiado
+desconfianza
+desconfiar
+desconocido
+desconocimiento
+descortés
+descortesía
+descuartizado
+descuartizador
+descuartizar 
+descubierto
+descubridor
+descubrimiento
+descubrir 
+descubrir
+descuidado
+descuidar
+descuido
+desdichado
+desear
+desechar
+desecho
+desembocadura
+desembocar
+desempleado
+desemplear 
+desempleo
+desenfrenado
+desenfrenar
+desengañado
+desengañar 
+desengaño
+desenrollado
+desenrollar 
+desentonado
+desentonar
+desenvolver 
+desenvuelto
+deseo
+deseoso
+deseoso 
+desgajado
+desgajar
+desgracia
+desgraciado
+desgranado
+desgranar 
+desgranaraíz
+desguance
+desguanzado
+deshilado
+deshilado
+deshilar
+deshonra
+deshonrado
+deshorar 
+deshorar
+deshorden
+deshordenar
+desierto de arena
+desierto 
+desmayado
+desmayar
+desmayar
+desmayar
+desmayarse
+desmayo
+desmenuzado
+desmigajado
+desmigajar 
+desmontar
+desmonte
+desmoronado
+desmoronar
+desnivel
+desnudar
+desnudar
+desnudez
+desnudo
+desobediencia
+desobediente
+desobediente
+desodorante
+desodorante
+desollado 
+desollamiento de hombres
+desollamiento
+desorden
+desordenado
+desordenar 
+desovar 
+despachar unnegocio
+despacio
+desparpajado
+desparpajar
+despedazado
+despedazado por desilición 
+despedazar 
+despedazar a alguien
+despedazar
+despedida
+despedido
+despedir
+despedirse 
+despegado
+despegar
+despegarse
+despejado
+despejar
+despellejar
+despeñado
+despeñarse el agua
+desperar 
+despercudido
+desperdiciar 
+despertar
+despertar de un desencanto
+despertar
+despertarse 
+despierto
+despistado
+desplantador
+desplegado
+desplegar
+despliegue
+desplumado
+desplumar
+despoblado
+despoblar
+despojado
+despojar
+despojo
+despreciado
+despreciado
+desprecio
+desprender
+desprenderse
+desprenderse 
+desprendido
+desprendimiento
+después
+desquebrajar
+destapado
+destapador
+destapar
+destartalado
+destartalador
+destartalar
+destemplado
+desterrado
+desterrar
+desterreado 
+destierro
+destilación
+destilado
+destilar
+destino
+destrozado
+destrozar
+destrozo
+destrucción
+destrucción
+destructor
+destruido
+destruir 
+desván
+desvanecido 
+desvanecimiento
+desvelado
+desvelar
+desvergonzado
+desvergonzar
+detener
+detener
+detenido
+determinación
+determinación
+determinado 
+determinar
+detestar
+detrás de ellos 
+detrás de tí
+detrás de nosotros
+detrás de ti 
+detrás de ustedes
+deuda
+deuda
+deudor
+devanado
+devanado
+devanar
+devastación
+devastado
+devastar
+devenir
+devoción
+devolución
+devolver
+devuelto
 </div>
 
 <div class="nahuatl">
@@ -6005,6 +6418,419 @@ yamalia
 tepoztzotic
 noltic
 lotl
+tenemactli
+tenemactiani
+patolli
+temacac
+tepoztemaixilihuani
+cocoxochitl
+ichpochcihuatl
+cihuatlacatzintli
+mizxihuitl
+ichpocaconetl
+daniatl
+daniatecatl
+mitotiyotl
+itotiliztli
+mitotiqui
+itotia
+macehua
+itlacolli
+itlacoa
+itlacoltic
+itlacoltiliztli
+maca
+tlacaquitia
+ixcuitia
+nanamiqui
+tlahtolcaquilia
+cualti
+camayocahui
+atlitia
+ixnextia
+tlapolotia
+matlatlatza
+matlatzinia
+tlahcotonia
+ahuialtia
+tepehuia
+coloa
+temaca
+amimitl
+zoyacapolin
+ihuic
+itin
+con
+necoc
+nacaceh
+xoyeh
+mayeh
+cehcencalpan
+tonaltica
+omeixpan
+icon
+ihuicpa Hispania 
+zan nohui
+den
+oc yohuatzinco
+ihuicpa Mexico 
+zan ahuel
+yohualtica
+ayancuipan
+nepantlapallo
+cepan
+in quenin
+mani
+ihuicpa
+in ihuicpa
+copa 1
+itzintlan
+huiquilia
+amo chicahuac
+cuanacqui
+achicahuayotl
+achicahualli
+cocoloyotl
+inic matlactli
+ihtoa
+itoa
+camanalca
+cenca patio
+tlahtocuicayotl
+caquiztiliztli 1
+caquiztilli
+caquiztilia
+iztelehuatic
+iztelehua
+motlayolloliztli
+motlayollo
+motlayollotia
+tepoztlatzomaloni
+xopilli
+mapilli
+mapiltontli
+hueymapilli
+tlapilchihualiztli
+cotoctic
+pia 3
+temanahuilli
+tenahuatiliztli
+tepantlahto
+tlanecemixnahualiztli
+tlanecemixnahualli
+necemixnahua
+zatepan
+tlaquechtenquilli
+quechtenqi
+cahuato
+cahuaqui
+cochcahua
+cahua 2
+teixpac
+iyixpan
+imixpan
+ixtlan
+temactilli
+temactia
+amichichi
+canahuac
+pitzactic
+pitzahuac
+pitzahuayotl
+nematcatilli
+mazacihuiliztli
+axelolli
+amaxac
+#¿NOMBRE?
+papatio
+teyohua
+teyohuaztli
+teyohuazqui
+tecelotl
+tzitzimitl
+tzitzimimeh
+ixtlatiliztli
+ixtlalia
+tlanticitl
+ihtic
+itech calli
+itech
+chancalli
+tzontequiztli
+momotlaliztli
+ahuilticayoc
+momotlalo
+cuezcomatl
+anetlacualtiliztli
+anetlacualtililli
+tlacoyaliztli
+amonotzalani
+yec
+nahuatilmatiliztli
+mimatqui
+melahuac 2
+nahuatiltlacayotl
+icitiztli
+xiximi
+potlania
+nonoqui
+atilia
+atia
+tlazatli
+xitenia
+xetinia
+amo cualcani
+anilia
+ayuhcayotl
+nauhcahuia
+tenauhcahuiliztli
+machiztli
+acemelli
+amocnelilmatini
+chancho
+nenequiliztli
+icnohuac 
+icnohuatl 
+polihui 1
+polihuini
+polihuiliztli
+tetlahuitzcapitli
+xixihui
+tlahuizcapina
+temozcaliztli
+ohuitepanyaliztli
+tepanyallo
+totomac
+amotlattiliztli
+amotlatini
+teniza
+tenizaliztli
+xixini
+xixinia
+tepexihuic
+tepexihuia
+tecuatepacholli
+cuatepachoa
+cactonqui
+cehuia 1
+cehuiliztli
+aninomamatini
+chichiqui
+aninomamati
+tlamamaltemohuiliztli
+tlamamaltemohui
+tlamamaltemohuia
+temolia
+temohuia
+tlatemohuilli
+temoliztli
+temoztli 1
+petlauhtli
+petlahua 2
+tzomoni
+tzitoma
+iztalehuac
+ihtlacoa
+xitic
+nepatlauhtli
+nepatlaliztli
+nepatla
+amixmachtli
+ayahuitl 2
+atlacatlahtoac
+atlacatlahtoliztli
+tlatetenqui
+tlatetenquiani
+tetenquia
+tlapantlazalilli
+tlapantlazaliani
+tlapantlazaliztli
+pantlaza
+nextia 1
+yoloquimalli
+yoloquimatia
+yoloquimatiliztli
+atlehuelli
+elehuia
+payanca
+tlaxitinilli
+acamatl
+acamati
+tequixtilli
+quixtia 2
+tequixtiliztli
+tentlahueliloc
+tentlahuelia
+tetlaixtlatililli
+tlaixtlatilia
+tetlaixtlatiliztli
+tlatomatli
+toma
+cuicachalaniuhtli
+cuicachalania
+totoma
+tlatotontli
+eliuhtiliztli
+tlanenequini
+eliuhtiztic
+tzayanilli
+tzayana 2
+aompayotl
+aompanehui
+oyalli
+oya
+tlayoloa
+ihuatiliztli
+ihuatic
+tenchayahuac
+tenchayatli
+tenchaya
+temahuizpololiztli
+temahuizpololli
+mahuizpoloa
+xicuetzi
+chincatl
+xinia
+xalyuhcatlan
+tlahuacapanixtlalhuac
+zotlauhqui
+cuetlahui
+zotlahua 1
+yolmiqui
+cochhuetzi
+zotlahualiztli
+teayayanolli
+necacayachililli
+cacayachilia
+tlaintia
+tlaintli
+cacayacac
+cacayaca
+pachihuitl
+xipetza
+petlahua 3
+tlapetlahualiztli
+xipetzoc
+atetlacamatiliztli
+atecaquini
+atetlacamatini
+ahuitilli
+ahuiacatl
+tlaxipeuhtli
+tlacaxipehualiztli
+xipehualiztli
+tlaxitiniliztli
+tlaxitinililli
+xitinilia
+teza
+cecencahua
+yoltic
+xinini
+xini
+cocotonani
+tlatlapalli
+tetenqui
+tlapana
+cocotona
+teixnahuatiliztli
+teixnahuatililli
+ixnahua
+ixnahuatia
+acohuilli
+molehui 1
+tlamolehui
+tonatli
+xapotla 2
+xipehua
+cholololli
+chololoa
+cochihua
+xacualolli
+zolchihua
+icitia
+tlatlachia 1
+iza
+cochehua
+iztoc
+ixcuapalli
+tlaecaquetzaloni
+tlazohualli
+tlazohua
+tlazohualiztli
+tlahuihuitli
+huihuitla
+popoliuhqui
+momoyahua
+tlacencuililli
+tlacencuilia
+tlacencuiliztli
+amotlaixtililli
+tlatelchihualli
+yolizpachotli
+chapani 
+mixehui
+molehui 2
+tlamomoleuhtli
+tlamoleuhtli
+quintepan
+ayayanoa
+petlahuac
+petlahualoni
+petlahua 1
+chachalactic
+chachalactli
+chachalactia
+chalani
+tlatotoctli
+totocqui
+tlatotoquilli
+tlatotoquiliztli
+chichipiniliztli
+chichipinilli
+chichipina
+tonalli 2
+tlaixpololli
+ixpoloa 1
+tlaixpololiztli
+tlapopoliztli
+tlaizpololiztli
+tlapopoloani
+tlapopololli
+popoloa
+tlapanco
+yolmiquililli
+yolmiquiliztli
+ixtlahuic
+ixtlahui
+apinahualli
+apinahua
+tzicoa 1
+huehcahua 1
+tzicauhqui
+tlacelmilhuiliztli
+necemixnahuatiliztli
+tlacelmilhuilli
+tlacelmilhuia
+telchihua
+imicampa
+nicampa
+ticampa
+micampa
+amicampa
+tlapopocauhtiliztli
+huiquiliztli
+tlapopocauhtli
+ilacatztic
+mazaciuhqui
+ilacatzoa
+piciltiliztli
+piciltli
+picilloa
+calihui
+teomatiliztli
+copililiztli
+copilia
+copililli
 </div>	 
 		 
 	 </body>
