--- a/index.html
+++ b/index.html
@@ -3435,6 +3435,293 @@ devoción
 devolución
 devolver
 devuelto
+día de dar de comer a los dioses
+día deiesta
+día de la Guadalupana
+día de la liberación
+día de la patria 
+día de lasadres
+día deuertos 
+día del año nuevo
+díaeriado
+día
+día
+diablo
+diablos
+diabólico
+diabólico
+diabólico
+dialecto
+dialogo
+diálogo
+diamante
+diariamente
+diario
+diario
+diario
+diarrea
+diarrea
+dibujado
+dibujar
+dibujo
+dibulgado
+dibulgar
+dicción
+diccionario
+diccionarios
+dichoso
+diciembre
+diecinueve
+dieciocho
+dieciseis
+diecisiete
+diente
+dientón
+dieresis
+diesel
+dieta
+diez
+difamado
+difamador
+difamar
+diferencia
+diferenciar
+diferenciar colores
+diferente
+diferido
+diferir 
+diferir
+difícil
+dificultad
+difundido
+difunto
+digerido
+digestión
+dignidad
+digno
+digno
+Dijbuti
+dilatado
+dilatar 
+diligencia
+diligente
+diluvio
+dimensión
+Dinamarca
+dinero
+dinosaurio
+dios ciego
+dios del sol
+dios del viento
+dios enemigo
+diosalso
+dios hijo 
+Dios
+Dios
+diosaligno
+dios petrificado
+dios terrible
+dios viejo
+diosa
+dioses de los barrios
+dioses
+diputación
+diputado
+dique
+director
+dirigido
+dirigir 
+disciplina
+disciplinado
+disciplinar con rudeza
+disco compacto
+disco
+disco
+discordia
+discreción
+discreción 
+discrepancia
+discurso antiguo
+discurso
+disentería
+diseño
+disfraz
+disfrazado
+disfrazar
+disfrutar
+disimulado
+disimulador
+disimular
+disimulo
+diskette
+disolución
+disolver
+disparar
+disparejo
+disparo
+dispersar 
+dispersión
+disperso
+disponer de tiempo
+disponer
+disposición
+dispuesto
+disputado
+distancia
+distante
+distinción
+distinguido señor
+distinguido
+distintamente
+distinto
+distraerse
+distribuido
+distrito
+distritos
+diversidad
+diversión
+divertido
+divertir
+dividible
+dividir
+divinidad
+divino
+divisar
+división
+divisor
+divorciado
+divorciar
+divorcio
+dizque
+doblado
+doblar
+doblar 
+doblar
+doble 
+doblegar 
+doblegarse 
+dobletear
+doblez
+doce
+doctor
+doctrina
+documento
+doler
+doler el corazón
+doler el cuerpo
+doler el estomago
+doler el pecho
+doler la cabeza
+doler las piernas
+doler los dientes
+doler los intestinos
+doler los oídos
+doler los ojos
+doler los pies
+dolor cardiáco
+dolor de cabeza
+dolor de estomago
+dolor de intestinos
+dolor deuela
+dolor de oídos
+dolor de ojos
+dolor de piernas
+dolor de pies
+dolor del cuerpo
+dolor
+dolor
+dolororal
+doloroso
+doloroso 
+domado
+domador
+domar
+dominado
+dominante
+dominar
+dominar
+Dominca
+domingo
+Domingo de pascua
+domingo
+dominicano
+dominico
+dominio
+dominó
+don 
+dona
+donación
+donación sanguínea
+Donato Guerra 
+doncella
+doncellas
+doncellas
+doncientos
+dónde
+donde sea
+donde
+dondequiera
+donsella
+dorado
+dorado
+dorado
+dorar
+dorar
+dorar
+dormido
+dormido
+dormirucho
+dormir
+dormirse 
+dormitar
+dormitorio
+dos guerras
+dos 
+dosil cuatrocientos
+dosil
+dosil ochocientos
+dos veces
+dotado
+dotar 
+dragón
+dramático
+drenaje
+droga
+droga
+drogadicción
+drogadicto
+drogado
+drogar
+drupa
+dualidad 
+Dublín
+duda
+dudar
+dudosamente
+dueño de lailpa
+dueño
+dueño
+dueño
+dueños
+dueños
+dulce
+dulce
+dulce
+dulzura
+duna
+dúo 
+durabilidad
+durable
+duradero
+duradero
+duranguense
+duraznillo 
+durazno
+dureza
+duro
+duro de carácter
+duro
+duro
 </div>
 
 <div class="nahuatl">
@@ -6831,6 +7118,293 @@ teomatiliztli
 copililiztli
 copilia
 copililli
+tlatlacualiztli
+ilhuitonalli
+Gualupita tonantzintlailhuitl
+tlahtoyahualiztli
+tlahtocayotzintlailhuitl
+nantzintlailhuitl
+miquizilhuitl
+xiuhilhuitl
+cemilhuitl
+tonalli 1
+ilhuitl
+tlacatecolotl
+tlatlacatecolo
+tlacatecoloyotl
+tecelo
+tzitzimilo
+calpoltlahtolli
+yoliliztlahtolli
+nonotzaliztli
+tlatayatl
+momoztlatica
+momoztlamoxtli
+momoztlatzinca
+momoztla
+apitzatli
+tixtli
+tlatlilanlilli
+cuiloa
+tlatlilantli
+tlapantlalli
+tzayana 1
+tlahtolyotl
+tlahtolamoxtli
+tlahtolamoxtin
+tlamacehuani
+diciembri
+caxtolnahui
+caxtolyei
+caxtolli huan ce
+caxtolome
+tlantli
+tlaxipetic
+ometliltetl
+chiantletl
+netlacualiztli
+matlactli
+texictlazalli
+tlatenahualoni
+xiquitzoa
+amoneneuhcayotl
+amoneneuhqui
+nepantlapaloa
+amoneuhqui
+tlahuehcatlaxtli
+huehcatlaxtia
+amonamiqui
+ohuitl
+ohuicayotl
+mauhqui 2
+micqui
+otemoc
+tlatemohuiliztli
+tecuhyotl
+malhuiloni
+machuaztic
+Dixibutia
+zamauhqui
+zamahua
+iciuhcayotl
+yelli 1
+apachiohualiztli
+tlatamachilli
+Dania
+tomin
+hueycuetzpalin
+itzcoliuhqui
+tonatiuhteotl
+ehecateotl
+apochcayaoteotl
+iztlacateotl
+teoconetl
+teoyocoyani
+teotl
+tzitzimiteotl
+teteotl
+tetzauhteotl
+huehueteotl
+cihuateotl
+calpolteteo
+teteo
+tecuhtlahtoliztli
+tecuhtlahto
+apantlacuihuayan
+tlacatlahtoani
+tlamalahualilli
+melahualia
+tenonotializtli
+tlanonotzalli
+toponaltia
+tonameyocaquizcopinaloni
+malaqui
+caquizcopinaloni
+neixmaquiliztli
+nematilizcayotl
+nematalizcayotl
+amonamictli
+huehuetlahtolyotl
+amamecatl
+tlecoacihuiliztli
+nextiyotl
+xayacactli
+mixpoloqui
+ixpoloa 2
+ahuia 1
+anemocacnequilli
+anemoccanequini
+anemoccacnequi
+anemoccanequiliztli
+dixquetl
+atlacaneminiliztli
+neneloa
+motla
+chichicoc
+motlaliztli
+tlaocolia
+tetlaocoliztli
+tetlaocolli
+maxilia
+cencahua
+tlacencahualiztli
+mocencahuani
+ixcomacalli
+calcayotl
+huehcateitztica
+tlaxexeloliztli
+tecuhtzintli
+piltecatl
+tlaxexeloztica
+tlaxexelolli
+amana
+xexelo
+alteptlatilantoc
+altepetlatilantoque
+nepanyotl
+mahuizoyotl
+mahuizolli
+mahuizoa
+xelihuini
+xexeloa
+teoyotl
+mahuiztli
+panitta
+xelihuiliztli
+xeloloni
+tematumalli
+matuma
+nematumaliztli
+machamo
+cuelpachoalli
+noloa 1
+cuelpachoa
+omelia
+tlacuelpacholiztli
+cueloa 1
+cueloa 2
+ixnepanoa
+tlapoztectli
+matlactli huan ome
+hueytemachtiani
+temachtilli
+amatzin
+tonehua
+yolotenehua
+nechcocoya
+ixconechcocoya
+elpantlatenehua
+tzonteconehua
+metzcocoya
+tlancocoya
+cuitlaxcocoya
+nacacocoya
+ixcocoya
+xomococoya
+yolocuacuallotl
+tzoncuacuallotl
+ixconechcuallotl
+cuitlaxpantlazaliztli
+tlancuachcuallotl
+nacacocoyaliztli
+ixcocoyaliztli
+metzcocoyaliztli
+xomococyaliztli
+nechcocoyaliztli
+chicihuinaquiliztli
+necocoliztli
+tetzauhmaliztli
+chichinactic
+tetlaococtli
+tlacaciuhqui
+tlacaciuhtiani
+tlacacihui
+tecpanilli
+tecpani
+tecpania
+tepani
+Dominica
+domingo
+paxcuatlateoilhuitl
+teoilhuitl
+dominitecatl
+Domingo teopixqui
+axcayotl
+tlapoapatoliztli
+teaxcatilli
+tlaxcalcoltontli
+temactiliztli
+eztetliocolilli
+Malacatepec
+cihuapilli
+cihuapiltin
+ichpochtin
+matlacpoalli
+canin
+macanapa
+canic
+nohuiampa
+ichpochtli
+teocuitlatic
+totopoctli
+ixcatoc
+teocuitlayotia
+totpoa
+ixcati
+cochmiqui
+cochtli
+tequicochi
+cochi
+cochquia
+cochtica
+cochiyan
+omeyaotlan
+ome
+chicuatzontli
+macuiltzontli
+chicotzontli
+ocpan
+maceuhcatilli
+yocatia
+quetzalcuetzpalin
+ixehuayo
+acoyoctli
+cochipatli
+cochitic
+cochipayotl
+cochipatiani
+cochipatilli
+cochipatia
+ahuaxocotl
+ometiliztli
+Dublin
+neyoltzonaliztli
+omeyoloa
+amoneltica
+mileh
+tecohtli
+huacac
+axcatiani
+tecohtin
+axcatianimeh
+necuhtic
+tzopelli
+tzopelic
+tzopelicayotl
+xallan
+tlapiomecuicaliztli
+chachaltillotl
+chachaltic
+mochipacac
+cemiac
+tepehuatecatl
+aichuiztli
+yoloxocotl
+chicauhcayotl
+tlalichtic
+opahuac
+tequizqui
+chicahuac
 </div>	 
 		 
 	 </body>
